# EV-Recharge-API

./: README.md  manage.py  pyproject.toml  requirements.txt  requirements_dev.txt
api_app/: admin.py  models.py  serializers.py  urls.py  views.py
api_app/migrations/: 0001_initial.py  0002_auto_20191117_1540.py  0003_auto_20191117_1542.py  0004_auto_20191117_1610.py
api_app/views/: station.py
charge_api/: apps.py  models.py
charge_api/migrations/: 0001_initial.py
dashboard/: forms.py  models.py  urls.py  views.py
dashboard/migrations/: 0001_initial.py
ev_charge/: asgi.py  config.py  settings.py  urls.py  wsgi.py
ev_recharge_api/: settings.py  urls.py  wsgi.py
templates/: base.html
templates/admin_dashboard/: user_list.html
templates/authentication/: login.html  password_reset_email.html
